参加費と資料代をわける、懇親会費を追加など

--- a/forum2010Annai.html
+++ b/forum2010Annai.html
@@ -12,7 +12,7 @@ href="http://wwwsoc.nii.ac.jp/jsik/bukai/sgml.html">情報知識学フォーラム</A> &gt
 </P>
 <P><B><FONT size="+2">第 15 回情報知識学フォーラム</FONT></B><BR>
 <B><FONT size="+2">「多様化する電子書籍端末と学術情報流通」</FONT></B>
-<B><FONT size="+1">　　［<A href=http://bit.ly/JSIKForum2010 target="_blank">事 前 申 込</A>］</FONT></B>
+<B><FONT size="+1">　　［<A href=http://bit.ly/JSIKForum2010 target="_blank">参 加 申 込</A>］</FONT></B>
 </P>
 <P>iPad, Kindleは電子書籍のブームを起こしましたが、現状はむしろ多様化しているように見えます。
 そこで標記のテーマを主に技術的観点から考えるため、次のとおり、大学、出版、印刷の
@@ -57,21 +57,29 @@ href="http://wwwsoc.nii.ac.jp/jsik/bukai/sgml.html">情報知識学フォーラム</A> &gt
   <TR><TD></TD><TD>司会: 原田隆史　パネリスト: 杉本重雄、植村八潮、秋元良仁</TD></TR>
   <TR><TD>　17:10-17:20</TD><TD>閉会挨拶　石塚英弘 <FONT size="-1">(情報知識学フォーラム実行委員長)</FONT></TD></TR>
   <TR><TD><FONT size="-1">　</FONT></TD></TR>
-  <TR><TD>　17:30-</TD><TD>懇親会</TD></TR>
+  <TR><TD>　17:30-</TD><TD>懇親会 (一般：4000円, 学生：2000円)</TD></TR>
   <TR><TD><FONT size="-1">　</FONT></TD></TR>
 </TABLE>
 <TABLE width=700>
  <TD><TR>
-  <P><B><FONT size="+1">参加費</FONT></B>
-    </P>
+  <P><B><FONT size="+1">参加費: 無料</FONT></B></P>
+  <P><B><FONT size="+1">資料代</FONT></B></P>
     <UL>
-      <LI>参加費：無料<br/>　　　ただし、非会員のみ：資料代　3,000 円(一般) / 1,500 円(学生)</LI>
-      <LI>当日参加可能。当日の学会入会も可能。</LI>
+      <LI>会員・学生会員（後援/協賛団体会員含む）：無料</LI>
+      <LI>非会員：3,000 円</LI>
+      <LI>学生非会員：1,500 円</LI>
     </UL>
     <UL>
-      <LI>当日は資料として情報知識学会誌の20巻4号を配布します。</LI>
+      <LI>当日の学会入会も可能です。</LI>
+      <LI>資料は情報知識学会誌の20巻4号となります。</LI>
       <LI>資料代は当日徴収いたします。</LI>
     </UL>
+    <P><B><FONT size="+1">参加申込</FONT></B></P>
+    <P>参加申込は次のページからお願いします：<a href="http://bit.ly/JSIKForum2010" target="_blank">http://bit.ly/JSIKForum2010</a></P>
+    <ul>
+      <li>定員は120名です。<!--もし定員を越えた場合には参加申込の先着順といたしますので、あらかじめご了承ください。
+      <li>定員に達しない場合は、-->当日参加も可能ですが、できるだけ事前の参加申込をお願いしております。
+    </ul>
     <P><B><FONT size="+1">お問い合わせ先</FONT></B>
     </P>
     <P>　情報知識学会事務局<BR>
