--- a/forum2010Annai.html
+++ b/forum2010Annai.html
@@ -30,6 +30,9 @@ href="http://wwwsoc.nii.ac.jp/jsik/bukai/sgml.html">情報知識学フォーラム</A> &gt
     </UL>
 </TD></TR>
 </TABLE>
+
+<p><a href="forum2010Annai.pdf">PDF</a></p>
+
   <P><B><FONT size="+1">プログラム</FONT></B></P>
 
 <TABLE border=0 width="700">
