非会員も歓迎追加、開催PDFに変更

--- a/forum2010Annai.html
+++ b/forum2010Annai.html
@@ -16,7 +16,7 @@ href="http://wwwsoc.nii.ac.jp/jsik/bukai/sgml.html">情報知識学フォーラム</A> &gt
 </P>
 <P>iPad, Kindleは電子書籍のブームを起こしましたが、現状はむしろ多様化しているように見えます。
 そこで標記のテーマを主に技術的観点から考えるため、次のとおり、大学、出版、印刷の
-分野から専門家を招き、講演と総合討論を行います。
+分野から専門家を招き、講演と総合討論を行います。会員、非会員を問わず、多数の方のご参加を期待しております。(<a href="forum2010Annai.pdf">開催案内 PDF</a>) 
 </P>
 <TABLE border="0">
   <TR>
@@ -31,7 +31,6 @@ href="http://wwwsoc.nii.ac.jp/jsik/bukai/sgml.html">情報知識学フォーラム</A> &gt
 </TD></TR>
 </TABLE>
 
-<p><a href="forum2010Annai.pdf">PDF</a></p>
 
   <P><B><FONT size="+1">プログラム</FONT></B></P>
 
