--- a/forum2010Annai.html
+++ b/forum2010Annai.html
@@ -15,9 +15,11 @@ href="http://wwwsoc.nii.ac.jp/jsik/bukai/sgml.html">情報知識学フォーラム</A> &gt
 <B><FONT size="+1">　　［<A href=http://bit.ly/JSIKForum2010 target="_blank">参 加 申 込</A>］</FONT></B>
 </P>
 <P>iPad, Kindleは電子書籍のブームを起こしましたが、現状はむしろ多様化しているように見えます。
-そこで標記のテーマを主に技術的観点から考えるため、次のとおり、大学、出版、印刷の
-分野から専門家を招き、講演と総合討論を行います。会員、非会員を問わず、多数の方のご参加を期待しております。(<a href="forum2010Annai.pdf">開催案内 PDF</a>) 
+そこで標記のテーマを主に技術的観点から考えるため、次のとおり、大学、出版、印刷の分野から専門家を招き、講演と総合討論を行います。会員、非会員を問わず、多数の方のご参加を期待しております。(<a href="forum2010Annai.pdf">開催案内 PDF</a>) 
 </P>
+<div style="float:right;padding:5px;">
+<a href="./forum2010Annai.pdf"><img src="forum2010Annai.png" width="150" height="212"/></a>
+</div>
 <TABLE border="0">
   <TR>
     <TD>
@@ -100,6 +102,6 @@ href="http://wwwsoc.nii.ac.jp/jsik/bukai/sgml.html">情報知識学フォーラム</A> &gt
 高久雅生（物質・材料研究機構主任エンジニア）
 </FONT></TD></TR>
 </TABLE>
-<P><FONT size=-1>Updated on October 29, 2010</FONT></P>
+<P><FONT size=-1>Updated on November 3, 2010</FONT></P>
 </BODY>
 </HTML>
