--- a/forum2010Annai.html
+++ b/forum2010Annai.html
@@ -47,7 +47,7 @@ href="http://wwwsoc.nii.ac.jp/jsik/bukai/sgml.html">情報知識学フォーラム</A> &gt
 </FONT></B></TD></TR>
   <TR><TD></TD><TD>植村八潮 <FONT size="-1">(東京電機大学出版局 局長)</FONT></TD></TR>
   <TR><TD>　14:50-15:40</TD>
-         <TD>講演 3: <B><FONT size="+1">「EPUBの多言語対応に向けた取組と事例報告」
+         <TD>講演 3: <B><FONT size="+1">「EPUBの多国語対応に向けた取組と事例報告」
 </FONT></B></TD></TR>
   <TR><TD></TD><TD>秋元良仁 <FONT size="-1">(凸版印刷(株)情報技術研究室 シニア研究員)
 </FONT></TD></TR>
