--- a/forum2010Annai.html
+++ b/forum2010Annai.html
@@ -59,9 +59,10 @@ href="http://wwwsoc.nii.ac.jp/jsik/bukai/sgml.html">情報知識学フォーラム</A> &gt
   <TR><TD>　16:10-17:10</TD>
          <TD>総合討論</TD></TR>
   <TR><TD></TD><TD>司会: 原田隆史　パネリスト: 杉本重雄、植村八潮、秋元良仁</TD></TR>
-  <TR><TD>　17:10-17:20</TD><TD>閉会挨拶　石塚英弘 <FONT size="-1">(情報知識学フォーラム実行委員長)</FONT></TD></TR>
+  <TR><TD>　17:10-17:15</TD><TD>閉会挨拶　石塚英弘 <FONT size="-1">(情報知識学フォーラム実行委員長)</FONT></TD></TR>
+  <TR><TD>　17:15-17:30</TD><TD>理事会</TD></TR>
   <TR><TD><FONT size="-1">　</FONT></TD></TR>
-  <TR><TD>　17:30-</TD><TD>懇親会 (一般：4000円, 学生：2000円)</TD></TR>
+  <TR><TD>　17:40-</TD><TD>懇親会 (一般：4000円, 学生：2000円)</TD></TR>
   <TR><TD><FONT size="-1">　</FONT></TD></TR>
 </TABLE>
 <TABLE width=700>
